# diffbank

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  plot_style.mplstyle  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
docs/source/: api.md  bank.md  conf.py  constants.md  index.md  installation.md  metric.md  noise.md  usage.md  utils.md  waveforms.md
scripts/: README.md  calc_bank_eff.py  genbank_2D_threePN.py  genbank_3D_taylorf2reducedspin.py  genbank_4D_taylorf2.py  job-2D-threePN.sh  job-3D-taylorfsreducedspin.sh  job-4D-taylorf2.sh  job-threePN-coverage.sh  job-threePN-est-p-variation.sh  job-threePN-scaling.sh  minimal_example.py  plot_bank_effs.py  plot_density.py  plot_eta_dist.py  plot_neff_scaling.py  plot_scalar_curvature.py  plot_scaling.py  threePN-p.txt  threePN_est_p.py  threePN_est_p_variation.py
scripts/banks/: 3pn-random-1-mm=0.8-eta_star=0.8-n_eff=10.npz  3pn-random-1-mm=0.95-eta_star=0.9-n_eff=1000.npz  3pn-random-100-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-101-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-102-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-103-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-104-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-105-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-106-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-107-mm=0.95-eta_star=0.9-n_eff=500.npz  3pn-random-108-mm=0.95-eta_star=0.9-n_eff=500.npz  (+75 more)
tests/: test_bank.py  test_checkpointing.py  test_eff.py  test_est_ratio_max.py  test_genbank_2D_threePN.py  test_metric_speed.py  test_taylorf2_metric.py
(+56 files in other folders)
