[metadata]
name = diffbank
version = 0.0.1
description = Automatic gravitational wave template bank generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gravitational waves, template banks, jax
url = https://diffbank.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/adam-coogan/diffbank
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jax
    jaxlib
    jaxtyping
    numpy
    tqdm

[options.package_data]
* = *.dat

[options.packages.find]
where = src
